<resources>
    <string name="app_name">HW5072021</string>
    <string name="passenger">Passenger</string>
    <string name="jfk">JFK</string>
    <string name="time1">8:00AM</string>
    <string name="new_york_city">NEW York, city</string>
    <string name="sea">SEA</string>
    <string name="seattle">SEATTLE</string>
    <string name="depart">depart</string>
    <string name="_11_17am">11:17AM</string>
</resources>