<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/company_ig"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/name_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="@+id/company_ig"
        app:layout_constraintStart_toStartOf="parent"
       >

        <TextView
            android:id="@+id/pass_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="20dp"
            android:layout_marginHorizontal="50dp"
            android:textColor="@color/black"
            android:text="@string/passenger" />

        <TextView
            android:id="@+id/pass_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="20dp"
            android:text="Kate Hang"
            android:textColor="@color/black"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_height="250dp"
        android:src="@drawable/backfon"
        app:layout_constraintTop_toTopOf="@+id/name_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/info_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="@+id/name_line"
            app:layout_constraintStart_toStartOf="parent"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jfk"
                android:textSize="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/new_york_city"
                android:textSize="15dp"
                android:layout_marginHorizontal="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="arrive"
                android:textSize="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time1"
                android:textSize="35dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/white"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/info_ticket1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="@+id/name_line"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea"
            android:textSize="40dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/seattle"
            android:textSize="15dp"
            android:layout_marginHorizontal="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depart"
            android:textSize="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11_17am"
            android:textSize="35dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/shtih_kod"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/shtrihkod"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info_ticket1"
         />


</androidx.constraintlayout.widget.ConstraintLayout>